# playtest-pulse

./: .gitignore  ARCHITECTURE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
configs/: base.yaml
docs/adr/: 0001-use-simulated-playtest-telemetry.md  0002-use-pandas-for-analytics.md  0003-use-streamlit-for-dashboard.md  0004-use-sqlite-for-local-storage.md  0005-use-normalized-storage-tables.md  0006-separate-ingestion-analytics-storage-dashboard.md  0007-defer-sqlalchemy-desktop-and-streaming-features.md  README.md  template.md
scripts/: generate_sample_data.py  ingest_events.py  run_dashboard.py
src/playtest_pulse/analytics/: __init__.py  combat_metrics.py  event_frame.py  frame_validation.py  item_metrics.py  level_metrics.py  session_metrics.py
src/playtest_pulse/config/: __init__.py  config_exceptions.py  config_loader.py  config_schema.py
src/playtest_pulse/dashboard/: __init__.py  app.py  data_service.py
src/playtest_pulse/domain/: __init__.py  events.py  (+1 more)
tests/: README.md
tests/e2e/: test_local_dashboard_workflow.py
tests/helpers/: config_factories.py  event_factories.py  io_helpers.py
tests/integration/: test_csv_loader.py  test_storage_schema.py  test_telemetry_repository.py  test_telemetry_repository_inserts.py  test_telemetry_repository_queries.py
tests/unit/: test_combat_metrics.py  test_config_loader.py  test_dashboard_data_service.py  test_event_frame.py  test_event_schema.py  test_event_validation.py  test_item_metrics.py  test_level_metrics.py  test_project_import.py  test_sample_data_generator.py  test_session_metrics.py
(+7 files in other folders)
